@@ -11,6 +11,7 @@ prereqs_skip = JSON
 prereqs_skip = Mason::Tidy
 prereqs_skip = Mason::Tidy::App
 prereqs_skip = Perl::Tidy
+prereqs_skip = Perl::Tidy::Sweetened
 prereqs_skip = Pod::Checker
 prereqs_skip = Pod::Spell
 prereqs_skip = Pod::Tidy
@@ -47,6 +48,7 @@ Mason::Tidy::App = 0
 Perl::Critic = 0
 Perl::Critic::Policy::Moose::RequireMakeImmutable = 0
 Perl::Tidy = 0
+Perl::Tidy::Sweetened = 1.00
 Pod::Checker = 0
 Pod::Spell = 0
 Pod::Tidy = 0
