@@ -6,6 +6,14 @@ ignore = t/00-report-prereqs.t
 ignore = t/author-*
 ignore = t/release-*
 
+[PerlTidySweet]
+argv = --pro=$ROOT/perltidyrc
+except_modes = dzil
+select = {bin,lib,t}/**/{tidyall,*.{pl,pm,t}}
+ignore = t/00-report-prereqs.t
+ignore = t/author-*
+ignore = t/release-*
+
 [PodTidy]
 select = {bin,lib}/**/{tidyall,*.{pl,pm,pod}}
 ignore = t/00-report-prereqs.t
